Add Llama3.java demo - 100% pure Java LLM inference
New demo using mukel/Llama3.java for pure Java inference:
- Single-file implementation (~3000 lines)
- No native dependencies - runs anywhere Java runs
- Java Vector API for SIMD acceleration
- GraalVM optimizations supported

Performance results (Llama 3.2 1B FP16):
- Model load: ~1s
- Generation: ~12.2 tokens/sec
- Pure Java with Vector API, no GPU

Updated performance comparison:
| Approach           | Tokens/sec | Backend          |
|--------------------|------------|------------------|
| java-llama.cpp     | ~47        | JNI + Metal      |
| Llama3.java        | ~12.2      | Pure Java + SIMD |
| llama-cpp-python   | ~10        | ctypes + Metal   |
| TornadoVM GPULlama3| ~6.6       | Pure Java + GPU  |

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>